kubernetes/apps/database/influxdb/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: influxdb
  namespace: database
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - "influxdb.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influxdb
          port: 8086
          weight: 100
